--- a/backend-financial-tracker/Dockerfile.dev
+++ b/backend-financial-tracker/Dockerfile.dev
@@ -37,5 +37,4 @@ RUN chown -R www-data:www-data /var/www/html \
 && chmod -R 755 /var/www/html 
 
 # Si se usa volumen, da permisos a storage y bootstrap/cache
-# && chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache \
-# &&  chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
+# && chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache \ &&  chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
