--- a/backend-financial-tracker/.env.example
+++ b/backend-financial-tracker/.env.example
@@ -20,7 +20,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=pgsql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
@@ -65,3 +65,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 CORS_ALLOWED_ORIGINS=['http://localhost:3000']
+JWT_SECRET=your_jwt_secret_key
