--- a/landingpage-financial-tracker/docker-compose-dev.yml
+++ b/landingpage-financial-tracker/docker-compose-dev.yml
@@ -1,4 +1,3 @@
-
 services:
   app:
     container_name: container-landingpage-financial-tracker
@@ -6,9 +5,15 @@ services:
       context: .
       dockerfile: Dockerfile.mounted
     ports:
-      - "3000:3000"  # Mapea puerto 3000 (host) → 3000 (contenedor)
+      - "3000:3000" # Mapea puerto 3000 (host) → 3000 (contenedor)
+    environment:
+      - BACKEND_URL=http://backend-api:80/api
+      - NODE_ENV=development
+    networks:
+      - development
     volumes:
       - .:/app
-      - /app/node_modules  # Para evitar conflictos con node_modules local
-    environment:
-      NODE_ENV: development
+      - /app/node_modules # Para evitar conflictos con node_modules local
+networks:
+  development:
+    external: true
